example/k8s/k8s/cache-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-proxy-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: cacheproxy
  template:
    metadata:
      labels:
        component: cacheproxy
    spec:
      containers:
        - name: cache-proxy
          image: racp.example.cacheproxy
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
