example/k8s/k8s/microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: microservice
  template:
    metadata:
      labels:
        component: microservice
    spec:
      containers:
        - name: microservice
          image: racp.example.microservice
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
