example/k8s/k8s/cache-proxy-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-proxy-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: cacheproxy
  ports:
    - port: 5000
      targetPort: 5000
