example/k8s/k8s/microservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: microservice
  ports:
    - port: 5000
      targetPort: 5000
